iOS Compatibility: Eliminate List.sort() and complete Stream API removal
This commit completes critical iOS compatibility work by eliminating all
List.sort() calls and Stream API usage across iOS modules. These Java 8+
standard library APIs are not supported by RoboVM/MobiVM, even though
language features (lambdas) are supported.

Replaced all List.sort(Comparator) calls with Collections.sort() or
IterableUtil.sort() helper method:

**forge-core (11 files):**
- IterableUtil.java: Added sort() helper method
- CardPool.java: 3 instances fixed
- DeckGroup.java, Deck.java: comparator-based sorts
- MapToAmountUtil.java: Entry.comparingByValue() → anonymous Comparator
- FCollection.java: list.sort() → IterableUtil.sort()

**forge-game (6 files):**
- GameAction.java: 3 instances (static abilities, role sorting)
- CardLists.java: 7 instances (CMC, power, toughness sorting)
- Card.java: 2 instances (storedRolls natural ordering)
- TriggerChangesZone.java, CardProperty.java: timestamp sorting

**forge-gui (5 files):**
- QuestUtilUnlockSets.java: Lambda comparator → anonymous Comparator
- CardRanker.java: 2 instances with CardRankingComparator
- AdvancedSearch.java: 2 instances with card edition comparator
- Additional fixes in AbstractTournament, ItemManagerModel, etc.

**forge-gui-mobile (4 files):**
- RewardScene.java, FSkin.java: Identified libGDX Array.sort() as safe
- CardManager.java, ItemManager.java: list.sort() fixes

Converted all Stream API usage to manual loops and IterableUtil helpers:
- stream().anyMatch() → IterableUtil.any()
- stream().filter().collect() → IterableUtil.filterToList()
- stream().map().collect() → IterableUtil.mapToList()
- removeIf() → iterator-based removal
- BufferedReader.lines() → manual loop
- IntStream operations → manual loops with LinkedHashMap

**Files converted:**
- forge-game: UnlockDoorEffect, PumpEffect, AbilityFactory, Player, etc.
- forge-ai: GameState, PlayAi, ChooseGenericAi
- forge-gui: AgainstAllOdds, CardThemedDeckBuilder, W